--- a/authentication-lab/templates/add_tweet.html
+++ b/authentication-lab/templates/add_tweet.html
@@ -1,11 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    Great Job!
-    <a href="/"><button>signout</button></a>
-</body>
-</html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><META http-equiv="Content-Type" content="text/html; charset=utf-8"><style></style></head><body><u></u>
+
+
+    
+    
+
+<div>
+    <form method="post" action="http:///add_tweet" target="_blank">
+        
+        <div>
+            <label>Title*</label>
+            <div>
+                <input type="title" name="titel" id="m_titel">
+            </div>
+        </div>
+
+        
+        <div>
+            <label>text*</label>
+            <div class="m_input-group">
+                <input type="text" name="text">
+            </div>
+        </div>
+
+
+    </form>
+</div>
+</body></html>
